Added tests, work in progress at EmailHistory